add the possibility to trigger it manually

--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -1,7 +1,8 @@
 name: Update Website Data
 on:
   schedule:
-    - cron: "19 9 * * *"
+    - cron: "0 17 * * *"
+  workflow_dispatch:
 
 jobs:
   update-website:
