--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -21,7 +21,22 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run script
+        id: run-script
         run: python .github/scripts/check_database.py
+      
+      - name: create an issue
+        if: steps.run-script.outputs.result == 'false'
+        uses: dacbd/create-issue-action@main
+        with:
+          token: ${{ github.token }}
+          title: Exception during database update
+          body: |
+            ### Context
+            [Run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            [Codebase](https://github.com/${{ github.repository }}/tree/${{ github.sha }})
+            Workflow name - `${{ github.workflow }}`
+            Job -           `${{ github.job }}`
+            status -        `${{ job.status }}`
 
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.16.0
