work in progress

--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run script
         id: run-script
         run: |
-          output=$(python scripts/update_database.py)
+          output=$(python .github/scripts/check_database.py)
           echo "{no_error}={output}" >> $GITHUB_OUTPUT
       
       - name: create an issue
