--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -24,7 +24,7 @@ jobs:
         id: run-script
         run: |
           output=$(python .github/scripts/check_database.py)
-          echo "{no_error}={output}" >> $GITHUB_OUTPUT
+          echo "no_error=$output" >> $GITHUB_OUTPUT
       
       - name: create an issue
         if: steps.run-script.outputs.no_error == 'False'
