--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -24,10 +24,10 @@ jobs:
         id: run-script
         run: |
           output=$(python .github/scripts/check_database.py)
-          echo "no_error=$output" >> $GITHUB_OUTPUT
+          echo "no_error=${output}" >> $GITHUB_OUTPUT
       
       - name: create an issue
-        if: steps.run-script.outputs.no_error == 'False'
+        if: ${{steps.run-script.outputs.no_error}} == 'False'
         uses: dacbd/create-issue-action@main
         with:
           token: ${{ github.token }}
