--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Run script
         id: run-script
         run: |
-          my_var="toto"
-          echo "no_error=$my_var" >> $GITHUB_OUTPUT   
-        # output=$(python .github/scripts/check_database.py)
+          output=${python .github/scripts/check_database.py}
+          echo "no_error=$output" >> $GITHUB_OUTPUT   
+        # 
         # echo "no_error=${output}" >> $GITHUB_OUTPUT
       
       - name: create an issue
