--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -29,7 +29,7 @@ jobs:
         # echo "no_error=${output}" >> $GITHUB_OUTPUT
       
       - name: create an issue
-        if: steps.run-script.outputs.no_error == 'False'
+        if: steps.run-script.outputs.no_error == 'Hello World'
         uses: dacbd/create-issue-action@main
         with:
           token: ${{ github.token }}
