--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -21,7 +21,22 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run script
-        run: python .github/scripts/check_database.py
+        id: run-script
+        run: |
+          output=$(python .github/scripts/check_database.py)
+          echo echo "Output [$output]"
+          echo "no_error=$output" >> $GITHUB_OUTPUT   
+      
+      - name: create an issue
+        if: steps.run-script.outputs.no_error != ''
+        uses: dacbd/create-issue-action@main
+        with:
+          token: ${{ github.token }}
+          title: Exception during database update
+          body: |
+            ### Context
+            [Run](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            Exception -     `${{steps.run-script.outputs.no_error}}`
 
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.16.0
