--- a/.github/workflows/update_portfolio.yml
+++ b/.github/workflows/update_portfolio.yml
@@ -48,4 +48,4 @@ jobs:
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.16.0
         with:
-          commit_message: Database updated - ${{steps.today_date.outputs.today_date}}
+          commit_message: Database updated - ${{steps.today_date.outputs.date}}
